# bevy_cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MIGRATION.md  README.md  flake.nix  rust-toolchain.toml  rustfmt.toml
bevy_lint/: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  `  action.yml  build.rs  clippy.toml
bevy_lint/assets/: rustdoc.css
bevy_lint/docs/: 01-setup.md  02-creating-a-lint.md  README.md  index.md  release.md
bevy_lint/docs/how-to/: bump-rust.md  editor.md  macros.md  methods.md  release.md  types.md
bevy_lint/docs/reference/: conventions.md  lint-module-docs.md  macros.md
bevy_lint/docs/tutorials/: editor.md
bevy_lint/etc/: rustdoc.css
bevy_lint/src/: callback.rs  config.rs  driver.rs  groups.rs  lib.rs  lint.rs  paths.rs  sym.rs  version.rs
bevy_lint/src/config/: mod.rs
bevy_lint/src/lints/: borrow_of_reborrowable.rs  borrowed_reborrowable.rs  cargo.rs  commands_in_commands.rs  duplicate_bevy_dependencies.rs  init_event_resource.rs  insert_empty_bundle.rs  insert_event_resource.rs  insert_unit_bundle.rs  iter_current_update_events.rs  main_return_without_appexit.rs  missing_reflect.rs  mod.rs  panicking_methods.rs  panicking_query_methods.rs  plugin_not_ending_in_plugin.rs  sus_resource.rs  unit_component_insertion.rs  unused_appexit.rs  zst_query.rs
bevy_lint/src/lints/cargo/: duplicate_bevy_dependencies.rs  mod.rs
bevy_lint/src/lints/complexity/: mod.rs
bevy_lint/src/lints/correctness/: mod.rs
bevy_lint/src/lints/nursery/: camera_modification_in_fixed_update.rs  duplicate_bevy_dependencies.rs  mod.rs  zst_query.rs
bevy_lint/src/lints/pedantic/: borrowed_reborrowable.rs  main_return_without_appexit.rs  mod.rs
bevy_lint/src/lints/performance/: mod.rs
bevy_lint/src/lints/restriction/: disallow_schedule.rs  missing_default.rs  missing_reflect.rs  missing_trait_for_unit_struct.rs  missing_trait_impls.rs  mod.rs  panicking_methods.rs  schedule.rs
bevy_lint/src/lints/style/: bevy_platform_alternative_exists.rs  mod.rs  plugin_not_ending_in_plugin.rs  system_set_not_ending_in_system.rs  unconventional_naming.rs
bevy_lint/src/lints/suspicious/: insert_event_resource.rs  insert_message_resource.rs  insert_unit_bundle.rs  iter_current_update_events.rs  iter_current_update_messages.rs  mod.rs  unit_bundle.rs  unit_in_bundle.rs
bevy_lint/src/utils/: cargo.rs  hir_parse.rs  method_call.rs  mod.rs  panic.rs  traits.rs
bevy_lint/src/versions/: mod.rs  version_v16.rs
bevy_lint/tests/: ui.rs  ui_cargo.rs
bevy_lint/tests/dependencies/: Cargo.toml
bevy_lint/tests/dependencies/src/: lib.rs
bevy_lint/tests/test_utils/: mod.rs
bevy_lint/tests/ui/: Cargo.toml  main_return_without_appexit.rs  main_return_without_appexit.stderr
bevy_lint/tests/ui/auxiliary/: proc_macros.rs
bevy_lint/tests/ui/bevy_platform_alternative_exists/: main.fixed  main.rs  main.stderr  time.fixed  time.rs  time.stderr  time_import_issue.rs
bevy_lint/tests/ui/borrow_of_reborrowable/: commands.rs  commands.stderr  query.rs  query.stderr  resource.rs  resource.stderr
bevy_lint/tests/ui/borrowed_reborrowable/: bug_174.rs  closures.rs  closures.stderr  commands.rs  commands.stderr  deferred.rs  deferred.stderr  deferred_world.rs  deferred_world.stderr  entity_commands.rs  entity_commands.stderr  entity_mut copy.stderr  entity_mut.rs  entity_mut.stderr  filtered_entity_mut.rs  filtered_entity_mut.stderr  macros.rs  macros.stderr  mut_typed.rs  mut_typed.stderr  mut_untyped.rs  mut_untyped.stderr  non_send_mut.rs  non_send_mut.stderr  ptr_mut.rs  ptr_mut.stderr  query.rs  query.stderr  resource.rs  resource.stderr  self_param.rs
bevy_lint/tests/ui/camera_modification_in_fixed_update/: main.rs  main.stderr
bevy_lint/tests/ui/disallow_schedule/: disallow_fixed_update.fixed  disallow_fixed_update.rs  disallow_fixed_update.stderr  disallow_update.fixed  disallow_update.rs  disallow_update.stderr  fixed_update_schedule.fixed  fixed_update_schedule.rs  fixed_update_schedule.stderr
bevy_lint/tests/ui/insert_empty_bundle/: main.rs  main.stderr
bevy_lint/tests/ui/insert_event_resource/: bug_94.fixed  bug_94.rs  bug_94.stderr  main.fixed  main.rs  main.stderr
bevy_lint/tests/ui/insert_message_resource/: events.fixed  events.rs  events.stderr  main.fixed  main.rs  main.stderr
bevy_lint/tests/ui/insert_unit_bundle/: bug_248.rs  bug_248.stderr  bug_94.rs  bug_94.stderr  main.rs  main.stderr  muted.rs  spawn_empty.fixed  spawn_empty.rs  spawn_empty.stderr
bevy_lint/tests/ui/iter_current_update_events/: plain.rs  plain.stderr  res.rs  res.stderr
bevy_lint/tests/ui/iter_current_update_messages/: events.rs  events.stderr  plain.rs  plain.stderr  res.rs  res.stderr
bevy_lint/tests/ui/main_return_without_appexit/: base.stderr  bug_132.rs  bug_132.stderr  bug_87.rs  bug_87.stderr  bug_94.rs  bug_94.stderr  main.rs  main.stderr  muted.rs  muted_expr.rs  muted_expr.stderr  muted_function.rs  return_appexit.rs  return_result.rs  return_unit.rs  return_unit.stderr
bevy_lint/tests/ui/missing_default/: main.stderr
bevy_lint/tests/ui/missing_reflect/: bug_141.rs  bug_141.stderr  crate_level_only.rs  crate_level_only.stderr  derived.fixed  derived.rs  derived.stderr  impl.fixed  impl.rs  impl.stderr  impl_ref.fixed  impl_ref.rs  impl_ref.stderr  macros.rs  macros.stderr  main.fixed  main.rs  main.stderr  manual_owned.fixed  manual_owned.rs  manual_owned.stderr  manual_ref.fixed  manual_ref.rs  manual_ref.stderr  muted.rs  none_reflect_fields.rs  none_reflect_fields.stderr
bevy_lint/tests/ui/missing_trait_for_unit_struct/: missing_clone.fixed  missing_clone.rs  missing_clone.stderr  missing_copy.fixed  missing_copy.rs  missing_copy.stderr  missing_default.fixed  missing_default.rs  missing_default.stderr
bevy_lint/tests/ui/missing_trait_impls/: main.fixed  main.rs  main.stderr  missing_clone.fixed  missing_clone.rs  missing_clone.stderr  missing_copy.fixed  missing_copy.rs  missing_copy.stderr  missing_default.fixed  missing_default.rs  missing_default.stderr
bevy_lint/tests/ui/panicking_methods/: bug_94_query.rs  bug_94_query.stderr  (+10 more)
(+223 files in other folders)
