[workspace]
members = ["bevy_lint"]

[package]
name = "bevy_cli"
version = "0.1.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"
# When no binary is specific, run the main CLI by default.
default-run = "bevy"

# The main CLI executable
[[bin]]
name = "bevy"
path = "src/bin/main.rs"

[features]
default = ["rustup", "web"]

# To optimize the Wasm binaries
wasm-opt = ["web"]

# Run your Bevy app in the browser
web = [
    "dep:webbrowser",
    "dep:http",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:fs_extra",
]

# Support installing required targets with `rustup` from a prompt.
# You can disable this feature if your system doesn't have rustup installed.
rustup = []

[dependencies]
# CLI argument parsing
clap = { version = "4.5.16", features = ["derive"] }
# autocompletion auto-generation
clap_complete = "4.5.44"

# Easy error propagation and contexts
anyhow = "1.0.86"

# Generates new Bevy projects from templates
cargo-generate = "0.23"

# Better CLI user input
dialoguer = { version = "0.11.0", default-features = false }

# API interaction
serde = { features = ["derive"], version = "1.0.210" }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", default-features = false, features = [
    "default-tls",
    "blocking",
    "json",
] }
regex = "1.10.6"

# Understanding package versions
semver = { version = "1.0.23", features = ["serde"] }

# Parsing the Cargo manifest
toml_edit = { version = "0.22.22", default-features = false, features = [
    "parse",
    "serde",
] }

# Logging crates
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ansi_term = "0.12.1"

# Web dependencies

## Opening the app in the browser
webbrowser = { version = "1.0.2", optional = true }

## Serving the app for the browser
http = { version = "1.2", optional = true }
axum = { version = "0.8.1", default-features = false, features = [
    "ws",
    "http1",
    "tokio",
    "tracing",
], optional = true }
tower = { version = "0.5.2", features = ["util"], optional = true }
tower-http = { version = "0.6.1", features = ["fs", "trace"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

## Copying directories
fs_extra = { version = "1.3.0", optional = true }

[dev-dependencies]
# Forcing tests that can't be parallelized to be run sequentially
serial_test = "3.2.0"
assert_cmd = "2.0.16"
tempfile = "3"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/bevy-{ target }-v{ version }{ archive-suffix }"
pkg-fmt = "bin"
