[workspace]
members = ["bevy_lint"]

[package]
name = "bevy_cli"
version = "0.1.0-dev"
edition = "2024"
description = "A prototype Bevy CLI tool"
documentation = "https://thebevyflock.github.io/bevy_cli/cli/index.html"
repository = "https://github.com/TheBevyFlock/bevy_cli"
license = "MIT OR Apache-2.0"
# When no binary is specific, run the main CLI by default.
default-run = "bevy"

# The main CLI executable
[[bin]]
name = "bevy"
path = "src/bin/main.rs"

[features]
default = ["rustup", "web", "unstable"]

# Run your Bevy app in the browser
web = [
    "dep:webbrowser",
    "dep:http",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:fs_extra",
]

# Support installing required targets with `rustup` from a prompt.
# You can disable this feature if your system doesn't have rustup installed.
rustup = []

# Functionality that's unfinished or comes with caveats
unstable = []

[dependencies]
# CLI argument parsing
clap = { version = "4.5.48", features = ["derive"] }
# autocompletion auto-generation
clap_complete = "4.5.58"

# Easy error propagation and contexts
anyhow = "1.0.86"

# Better CLI user input
dialoguer = { version = "0.12.0", default-features = false, features = [
    "fuzzy-select",
] }

# Used to create styled table outputs.
comfy-table = "7.2.1"

# Cargo like styling for clap
clap-cargo = "0.17.1"

# Load and resolve Cargo configuration.
cargo-config2 = "0.1"

# API interaction
serde = { features = ["derive"], version = "1.0.224" }
serde_json = "1.0.145"
reqwest = { version = "0.12.7", default-features = false, features = [
    "default-tls",
    "blocking",
    "json",
] }
regex = "1.10.6"

# Understanding package versions
semver = { version = "1.0.27", features = ["serde"] }

# `cargo metadata` command helpers and types
cargo_metadata = "0.22.0"

# Parsing the Cargo manifest
toml = { version = "0.9.6", default-features = false, features = [
    "std",
    "parse",
    "display",
    "serde",
] }

# Logging crates
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ansi_term = "0.12.1"

# Web dependencies

## Opening the app in the browser
webbrowser = { version = "1.0.2", optional = true }

## Serving the app for the browser
http = { version = "1.2", optional = true }
axum = { version = "0.8.1", default-features = false, features = [
    "ws",
    "http1",
    "tokio",
    "tracing",
], optional = true }
tower = { version = "0.5.2", features = ["util"], optional = true }
tower-http = { version = "0.6.1", features = ["fs", "trace"], optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }

## Copying directories
fs_extra = { version = "1.3.0", optional = true }

[dev-dependencies]
# Forcing tests that can't be parallelized to be run sequentially
serial_test = "3.2.0"
assert_cmd = "2.0.16"
tempfile = "3"

[package.metadata.binstall]
# HACK: We currently hard-code the latest version in the URL. The `{ version }` template uses the
# version from the `main` branch's `Cargo.toml`, which is usually `X.Y.Z-dev`, leading to the
# binary not being found. See <https://github.com/cargo-bins/cargo-binstall/issues/2165> for more
# information.
pkg-url = "{ repo }/releases/download/cli-v0.1.0-alpha.1/bevy-{ target }-v0.1.0-alpha.1{ archive-suffix }"
pkg-fmt = "bin"
