[workspace]
members = ["bevy_lint"]

[workspace.lints.clippy]
# Prefer `str.to_owned()`, rather than `str.to_string()`.
str_to_string = "warn"

[package]
name = "bevy_cli"
version = "0.1.0-dev"
edition = "2024"
description = "A prototype Bevy CLI tool"
documentation = "https://thebevyflock.github.io/bevy_cli/cli/index.html"
repository = "https://github.com/TheBevyFlock/bevy_cli"
license = "MIT OR Apache-2.0"
# When no binary is specific, run the main CLI by default.
default-run = "bevy"

# The main CLI executable
[[bin]]
name = "bevy"
path = "src/bin/main.rs"

[features]
default = ["rustup", "web", "unstable"]

# Run your Bevy app in the browser
web = [
    "dep:webbrowser",
    "dep:http",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "dep:fs_extra",
]

# Support installing required targets with `rustup` from a prompt.
# You can disable this feature if your system doesn't have rustup installed.
rustup = []

# Functionality that's unfinished or comes with caveats
unstable = []

[dependencies]
# CLI argument parsing
clap = { version = "4.5.54", default-features = false, features = [
    "color",
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "derive",
] }
# autocompletion auto-generation
clap_complete = { version = "4.5.65", default-features = false }

# Easy error propagation and contexts
anyhow = { version = "1.0.101", default-features = false, features = ["std"] }

# Better CLI user input
dialoguer = { version = "0.12.0", default-features = false, features = [
    "fuzzy-select",
] }

# Used to create styled table outputs.
comfy-table = { version = "7.2.1", default-features = false }

# Cargo like styling for clap
clap-cargo = { version = "0.18.3", default-features = false, features = [
    "clap",
] }

# Load and resolve Cargo configuration.
cargo-config2 = { version = "0.1", default-features = false }

# API interaction
ureq = { version = "3.2.0", default-features = false, features = [
    "rustls",
    "json",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "std",
    "derive",
] }
serde_json = { version = "1.0.149", default-features = false, features = [
    "std",
] }

# Understanding package versions
semver = { version = "1.0.27", default-features = false, features = ["serde"] }

# `cargo metadata` command helpers and types
cargo_metadata = { version = "0.23.1", default-features = false }

# Parsing the Cargo manifest
toml = { version = "0.9.11", default-features = false, features = [
    "std",
    "parse",
    "display",
    "serde",
] }

# Logging crates
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.22", default-features = false, features = [
    "std",
    "ansi",
    "fmt",
    "env-filter",
] }
ansi_term = { version = "0.12.1", default-features = false }

# Web dependencies

## Opening the app in the browser
webbrowser = { version = "1.1.0", default-features = false, optional = true }

## Serving the app for the browser
http = { version = "1.4", default-features = false, features = [
    "std",
], optional = true }
axum = { version = "0.8.8", default-features = false, features = [
    "ws",
    "http1",
    "tokio",
    "tracing",
], optional = true }
tower = { version = "0.5.2", default-features = false, features = [
    "util",
], optional = true }
tower-http = { version = "0.6.8", default-features = false, features = [
    "fs",
    "trace",
], optional = true }
tokio = { version = "1.49", default-features = false, features = [
    "net",
    "rt",
    "macros",
], optional = true }

## Copying directories
fs_extra = { version = "1.3.0", default-features = false, optional = true }

[dev-dependencies]
# Forcing tests that can't be parallelized to be run sequentially
serial_test = "3.3.1"
assert_cmd = "2.1.2"
tempfile = "3"

[lints]
workspace = true

[package.metadata.binstall]
# HACK: We currently hard-code the latest version in the URL. The `{ version }` template uses the
# version from the `main` branch's `Cargo.toml`, which is usually `X.Y.Z-dev`, leading to the
# binary not being found. See <https://github.com/cargo-bins/cargo-binstall/issues/2165> for more
# information.
pkg-url = "{ repo }/releases/download/cli-v0.1.0-alpha.2/bevy-{ target }-v0.1.0-alpha.2{ archive-suffix }"
pkg-fmt = "bin"
