[package]
name = "bevy_lint"
version = "0.7.0-dev"
authors = ["BD103"]
edition = "2024"
description = "A collection of lints for the Bevy game engine"
repository = "https://github.com/TheBevyFlock/bevy_cli"
license = "MIT OR Apache-2.0"
# While there are two binaries available, only `bevy_lint` is intended to be called by users.
default-run = "bevy_lint"

[[test]]
name = "ui"
harness = false

[[test]]
name = "ui_cargo"
harness = false

[dependencies]
# Contains a series of useful utilities when writing lints. The version is chosen to work with the
# currently pinned nightly Rust version. When the Rust version changes, this too needs to be
# updated!
clippy_utils = "=0.1.95"

# Easy error propagation and contexts.
anyhow = "1.0.101"
# Easy structured output for `cargo metadata`, used for cargo lints
cargo_metadata = "0.23.1"

# Configuration deserialization.
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.11", default-features = false, features = [
    "std",
    "parse",
    "serde",
] }

# CLI argument parsing
pico-args = "0.5.0"

# Colored terminal output
anstream = "0.6.21"
anstyle = "1.0.13"

[build-dependencies]
# Parse `rust-toolchain.toml` at build time.
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "0.9.11", default-features = false, features = [
    "std",
    "parse",
    "serde",
] }

[dev-dependencies]
# Used when running UI tests.
bevy = { version = "0.18", default-features = false, features = [
    "std",
    # used for the `camera_modification_in_fixed_update` lint
    "bevy_render",
] }

# Used to deserialize `--message-format=json` messages from Cargo.
serde_json = "1.0.149"

# Ensures the error messages for lints do not regress.
ui_test = "0.30.4"

[lints]
workspace = true

[package.metadata.rust-analyzer]
# Enables Rust-Analyzer support for `rustc` crates.
rustc_private = true

[package.metadata.docs.rs]
# Unlike `cargo doc-lints`, docs.rs doesn't know this crate is in a workspace, it just receives the
# archive resulting from `cargo package`. In this scenario, we do not need to specify `bevy_lint` before
# `assets/rustdoc.css`.
rustdoc-args = ["--extend-css", "assets/rustdoc.css"]
