#@check-pass

[package]
name = "single-bevy-version"
publish = false
edition = "2024"

# This tells Cargo that this crate has no intention of being a member of the root workspace. If
# this was excluded, Cargo would raise an error.
[workspace]

[dependencies]
bevy = { version = "0.17.2", default-features = false }
leafwing-input-manager = "0.18"
